@@ -167,12 +167,16 @@ enum
 #ifndef _PATH_UTMP
 # ifdef UTMP_FILE
 #  define _PATH_UTMP UTMP_FILE
+# else
+#  define _PATH_UTMP "/var/adm/utmp"
 # endif
 #endif
 
 #ifndef _PATH_WTMP
 # ifdef WTMP_FILE
 #  define _PATH_WTMP WTMP_FILE
+# else
+#  define _PATH_WTMP "/var/adm/wtmp"
 # endif
 #endif
 
