@@ -6,6 +6,7 @@ dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_RANLIB
+AC_PROG_INSTALL
 AC_CHECK_PROG(AR, ar, ar)
 if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -Wall"; fi
 
