@@ -21,6 +21,9 @@
      postpone fork_after_authentication until command execution,
      request/patch from jahakala@cc.jyu.fi via damien@ibs.com.au
      plus: use daemon() for backgrounding
+ - Added BSD compatible install program and autoconf test, thanks to
+   Niels Kristian Bech Jensen <nkbj@image.dk>
+ - Solaris fixing, thanks to Ben Taylor <bent@clark.net>
 
 19991124
  - Merged very large OpenBSD source code reformat
